Updated to the new syntax format for issue templates

--- a/DspicoThemeForms.csproj
+++ b/DspicoThemeForms.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Folder Include=".github\ISSUE_TEMPLATE\" />
     <Folder Include="GithubImages\" />
     <Folder Include="Tools\" />
   </ItemGroup>
