Simplify versioning in project file
Removed VersionPrefix and build ID variables from the project file. The Version property is now set directly to "0.1.1" for clarity and simplicity.

--- a/DspicoThemeForms.csproj
+++ b/DspicoThemeForms.csproj
@@ -6,8 +6,7 @@
     <Nullable>enable</Nullable>
     <UseWindowsForms>true</UseWindowsForms>
     <ImplicitUsings>enable</ImplicitUsings>
-	<VersionPrefix>0.1.1</VersionPrefix>
-	<Version>$(VersionPrefix).$(Build.BuildId)</Version>
+	<Version>0.1.1</Version>
   </PropertyGroup>
 
   <ItemGroup>
