Standardize build artifact zip filename to release.zip
Updated the build step to use a fixed filename (release.zip)
for the zipped build artifacts, replacing the use of the
ReleaseZipName secret. This ensures consistent artifact naming
in the release workflow.

--- a/.github/workflows/version-and-release.yml
+++ b/.github/workflows/version-and-release.yml
@@ -27,7 +27,7 @@ jobs:
       run: dotnet build --configuration Release --no-restore
 
     - name: Zip the Build
-      run: zip -r ${{ secrets.ReleaseZipName }} ./DspicoThemeConverter/bin/Release/net10.0-windows/
+      run: zip -r release.zip ./DspicoThemeConverter/bin/Release/net10.0-windows/
       
     - name: Create Release
       id: create_release
