--- a/.github/workflows/version-and-release.yml
+++ b/.github/workflows/version-and-release.yml
@@ -1,52 +1,74 @@
-name: Release
+name: Version & Release
 
 on:
   push:
-    branches: [ "master" ]
-  pull_request:
-    branches: [ "master" ]
+    tags:
+      - "v*.*.*"
+  workflow_dispatch:
 
-env:
-  DOTNET_VERSION: '10.0.x' # Dotnet 10.0
+permissions:
+  contents: write
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
+  build-and-release:
+    runs-on: windows-latest
+
+    env:
+      PROJECT_NAME: DspicoThemeConverter
+      CONFIGURATION: Release
+      DOTNET_VERSION: 10.0.x
 
     steps:
-    - uses: actions/checkout@v3
-    - name: Setup .NET Core
-      uses: actions/setup-dotnet@v3
-      with:
-        dotnet-version: ${{ env.DOTNET_VERSION }}
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-    - name: Install dependencies
-      run: dotnet restore
+      - name: Setup .NET
+        uses: actions/setup-dotnet@v4
+        with:
+          dotnet-version: ${{ env.DOTNET_VERSION }}
 
-    - name: Build
-      run: dotnet build --configuration Release --no-restore
+      - name: Extract version from tag
+        id: version
+        shell: pwsh
+        run: |
+          $tag = "${{ github.ref_name }}"
+          $version = $tag.TrimStart("v")
+          echo "VERSION=$version" >> $env:GITHUB_ENV
 
-    - name: Zip the Build
-      run: zip -r release.zip ./DspicoThemeConverter/bin/Release/net10.0-windows/
-      
-    - name: Create Release
-      id: create_release
-      uses: actions/create-release@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        tag_name: ${{ github.run_number }}
-        release_name: Release ${{ github.ref }}
-        body: New Release.
-        draft: false
-        prerelease: false
+      - name: Restore dependencies
+        run: dotnet restore
 
-    - name: Upload Release Asset
-      uses: actions/upload-release-asset@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        upload_url: ${{ steps.create_release.outputs.upload_url }} 
-        asset_path: ./${{ secrets.ReleaseZipName }}.zip
-        asset_name: ${{ secrets.ReleaseZipName }}.zip
-        asset_content_type: application/zip
+      - name: Build
+        run: >
+          dotnet build
+          --configuration ${{ env.CONFIGURATION }}
+          /p:Version=${{ env.VERSION }}
+          /p:AssemblyVersion=${{ env.VERSION }}
+          /p:FileVersion=${{ env.VERSION }}
+          /p:InformationalVersion=${{ env.VERSION }}
+
+      - name: Publish
+        run: >
+          dotnet publish
+          --configuration ${{ env.CONFIGURATION }}
+          --framework net10.0-windows
+          --runtime win-x64
+          --self-contained false
+          /p:PublishSingleFile=true
+          /p:IncludeNativeLibrariesForSelfExtract=true
+          --output publish
+
+      - name: Zip release artifact
+        shell: pwsh
+        run: |
+          $zipName = "${{ env.PROJECT_NAME }}-${{ env.VERSION }}.zip"
+          Compress-Archive -Path publish\* -DestinationPath $zipName
+          echo "ZIP_NAME=$zipName" >> $env:GITHUB_ENV
+
+      - name: Create GitHub Release
+        uses: softprops/action-gh-release@v2
+        with:
+          name: Release ${{ env.VERSION }}
+          tag_name: v${{ env.VERSION }}
+          files: ${{ env.ZIP_NAME }}
+          generate_release_notes: true
